<resources>
    <string name="app_name">Appified</string>
    <string name="facebook_app_id">1715129542051769</string>
    <string name="fb_login_protocol_scheme">fb1715129542051769</string>
    <string name="screen_1_title">Chat anytime, anywere</string>
    <string name="screen_1">Passing of any information on any \n screen, any  device instantly is made \n simple at its sublime</string>
    <string name="screen_2_title">your space in your dream</string>
    <string name="screen_2">A leg-free video chat connection \n between your users is easy and much \n everywhere on any device.</string>
    <string name="screen_3_title">Perfect chat solution</string>
    <string name="screen_3">your space in your dream</string>
    <string name="email_id_placeholder">Provide email id</string>
    <string name="submit">submit</string>
    <string name="Hide">Hide</string>
    <string name="Unhide">Unhide</string>
    <string name="filter_by_alphabetically">Sort Alphabetically</string>
    <string name="filter_by_install_date">Sort By Install Date</string>
    <string name="user_app">Your Apps</string>

    <string name="my_app">My Apps</string>
    <string name="show_radio_button">Share with Friends</string>
    <string name="PAGF">PAGF</string>
    <string name="usage_tab">Usage</string>
    <string name="hide_radio_button">Only me</string>
    <string name="friend_app">Friends</string>
    <string name="third_tab">Third</string>
    <string name="fourth_tab">Fourth</string>
    <string name="recycler_title">Notification from selected apps will be blocked on status bar</string>
    <string name="default_setting">Default App Settings</string>
    <string name="hide_unhide">Controal the status of your apps(Hide/Unhide)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_me_choose_radio_button">Let me choose</string>
</resources>
